--- a/Quick AI 01/AI.Master
+++ b/Quick AI 01/AI.Master
@@ -8,11 +8,14 @@
     <link href="boostrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="font/css/all.css" rel="stylesheet" />
     <link href="boostrap/css/style.css" rel="stylesheet" />
-    
+    <link href="boostrap/css/all.min.css" rel="stylesheet" />
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="boostrap/css/jquery.min.js"></script>
     <script src="boostrap/js/jquery.slim.min.js"></script>
     <script src="boostrap/js/popper.min.js"></script>
     <script src="boostrap/js/bootstrap.bundle.min.js"></script>
+
      
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -70,10 +73,7 @@ margin-top: 85px;"r-light">
                </div>
            </nav> 
        </div-->
-        <nav style=" 
-    position: sticky;  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    background: #fff;
-    margin-top:33px;z-index: +1;">
+        <nav style="  position: sticky;  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);background: #fff;margin-top:33px;z-index: +1;">
     <nav class="navbar navbar-expand-lg navbar-light">
 <div class="header navbar-light bg-light" style=" position:fixed;width:100%;height:82px;"> 
     <div style="display:inline-block;border-right: 2px solid #e0e0e0;padding-right:10px;height:82px;padding-top:15px;padding-left:20px;padding-right:20px;" class="logo">
@@ -169,7 +169,13 @@ margin-top: 85px;"r-light">
                     <div class="footer-rows-right">
                         <div class="footer-row">
                             <ul class="footer-social-links">
-                                <li><a href="https://www.facebook.com/" target="_blank" rel="nofollow"><i class="fa fa-facebook"></i></a></li><li><a href="https://www.twitter.com/" target="_blank" rel="nofollow"><i class="fa fa-twitter"></i></a></li><li><a href="https://instagram.com" target="_blank" rel="nofollow"><i class="fa fa-instagram"></i></a></li><li><a href="https://www.linkedin.com/" target="_blank" rel="nofollow"><i class="fa fa-linkedin"></i></a></li><li><a href="https://pinterest.com/" target="_blank" rel="nofollow"><i class="fa fa-pinterest"></i></a></li><li><a href="https://www.youtube.com/" target="_blank" rel="nofollow"><i class="fa fa-youtube"></i></a></li>                            </ul>
+                                <li><a href="https://www.facebook.com/" target="_blank" rel="nofollow"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                <li><a href="https://www.twitter.com/" target="_blank" rel="nofollow"><i class="fa-brands fa-twitter" ></i></a></li>
+                                <li><a href="https://instagram.com" target="_blank" rel="nofollow"><i class="fa-brands fa-instagram" ></i></a></li>
+                                <li><a href="https://www.linkedin.com/" target="_blank" rel="nofollow"><i class="fa-brands fa-linkedin" ></i></a></li>
+                                <li><a href="https://pinterest.com/" target="_blank" rel="nofollow"><i class="fa-brands fa-pinterest"></i></a></li>
+                                <li><a href="https://www.youtube.com/" target="_blank" rel="nofollow"><i class="fa-brands fa-youtube"></i></a></li>
+                        </ul>
                             <div class="clearfix"></div>
                         </div>
                     </div>
@@ -179,6 +185,7 @@ margin-top: 85px;"r-light">
     </div>
 
 </div>
+        <div id="backtotop" class="visible"><a href="#"></a></div>
         </form>
     
 </body>
