--- a/Quick AI 01/boostrap/css/style.css
+++ b/Quick AI 01/boostrap/css/style.css
@@ -40,11 +40,15 @@ img {max-width: 100%;
 #logo {display: inline-block;border-right: 1px solid #e0e0e0;height: 100%;vertical-align: top;padding-right: 35px;margin-right: 20px }
 #logo img {height: 42px;width: auto;top: 50%;position: relative;transform: translate3d(0, -50%, 0) }
 #header {position: relative;z-index: 999;padding: 0;box-shadow: 0 0 18px 0 rgba(0, 0, 0, .12);font-size: 16px;height: 82px;background-color: #fff }
-#header .container, #header .right-side, #header .left-side {height: 100% }
+#header .container, #header .right-side, #header .left-side {height: 9%
+}
 header.fullwidth .container {max-width: 100%;margin: 0;padding: 0 35px }
 #header .container {position: relative }
 #header .left-side {float: left;width: 100%;display: inline-block;position: relative;flex: 1 }
-#header .right-side {float: right;text-align: right;width: auto;display: inline-block;position: absolute;right: 25px;background-color: #fff;flex: 1 }
+#header .right-side {float: right;text-align: right;width: 288px;
+display: inline-block;position: absolute;right: 25px;background-color: #fff;flex: 1;
+    top: 86px;
+}
 .full-width #header .left-side {float: left;width: 100%;display: inline-block;position: relative }
 .full-width #header .right-side {float: right;text-align: right;width: auto;display: inline-block;position: absolute;right: 25px;background-color: #fff }
 .header-widget {display: inline-block;height: 63%;
@@ -76,7 +80,7 @@ border-left: 1px solid #e0e0e0;padding: 0 30px;text-align: left;float: left
 @media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {.header-notifications-trigger, .header-notifications-trigger a {height: 40px }
 .header-notifications.user-menu {top: -8px }
 }
-.header-notifications-trigger span {position: absolute;display: inline-block;top: -15px;margin-left: -10px;font-weight: 700;height: 19px;width: 19px;line-height: 19px;text-align: center;color: #fff;font-size: 11px;background-color: #66676b;border-radius: 50%;position: relative }
+.header-notifications-trigger span {position: absolute;display: inline-block;top: -15px;margin-left: -10px;font-weight: 700;height: 19px;width: 58px;line-height: 56px;text-align: center;color: #fff;font-size: 11px;background-color: #66676b;border-radius: 50%;position: relative }
 .header-notifications-dropdown {width: 360px;border-radius: 4px;box-shadow: 0 2px 12px 0 rgba(0, 0, 0, .12);background-color: #fff;padding: 0;position: absolute;top: calc(100% - 10px);right: -15px;text-align: left;z-index: 100;transform: scale(.95);opacity: 0;visibility: hidden;transition: .3s;pointer-events: none }
 .language .header-notifications-dropdown {width: 210px !important;}
 .header-notifications.active .header-notifications-dropdown {transform: scale(1);opacity: 1;visibility: visible;pointer-events: all }
