--- a/Quick AI 01/AI.Master
+++ b/Quick AI 01/AI.Master
@@ -16,6 +16,7 @@
     <script src="boostrap/js/popper.min.js"></script>
     <script src="boostrap/js/bootstrap.bundle.min.js"></script>
 
+
      
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -73,16 +74,16 @@ margin-top: 85px;"r-light">
                </div>
            </nav> 
        </div-->
-        <nav style="  position: sticky;  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);background: #fff;margin-top:33px;z-index: +1;">
+        <nav style="  position: sticky;background: #fff;margin-top:33px;z-index: +1;">
     <nav class="navbar navbar-expand-lg navbar-light">
-<div class="header navbar-light bg-light" style=" position:fixed;width:100%;height:82px;"> 
+<div class="header navbar-light bg-light" style=" position:fixed;width:100%;height:82px;margin-top: -35px;"> 
     <div style="display:inline-block;border-right: 2px solid #e0e0e0;padding-right:10px;height:82px;padding-top:15px;padding-left:20px;padding-right:20px;" class="logo">
            <a   href="https://localhost:44308/Home.aspx">
             <img src="img/hhh.png" style="    width: 65px;height: 42px;" /></a>
     </div>
-   <div class="dropdown" style="float:right;    margin-top: -25px;padding-right:10px;border-left: 2px solid #e0e0e0;padding-top:20px;padding-left:10px;height:82px;">
+   <div class="dropdown" style="float:right;    margin-top: -3px;padding-right:10px;border-left: 2px solid #e0e0e0;padding-top:20px;padding-left:10px;height:82px;">
         <label for="Language"></label>
-                   <select name="Languge" id="Languge">
+                   <select name="Languge" id="Languge" style="height: auto; background-color: #444;">
                        <option value="en">english</option>
                        <option value=" Arabic "> Arabic </option>
                        <option value="Bangali">Bangali</option>
@@ -151,7 +152,7 @@ margin-top: 85px;"r-light">
                         <h3>Information</h3>
                         <ul>
                             <li><a>FAQ</a></li>
-                            <li><a >Testimonials</a></li>                        </ul>
+                            <li><a href="https://localhost:44308/Testimonials1.aspx">Testimonials</a></li>                        </ul>
                     </div>
                 </div>
             </div>
@@ -185,7 +186,7 @@ margin-top: 85px;"r-light">
     </div>
 
 </div>
-        <div id="backtotop" class="visible"><a href="#"></a></div>
+        <div id="backtoto" class="visible"><a href="#"><i class="fa-solid fa-chevron-up"></i></a></div>
         </form>
     
 </body>
