--- a/Quick AI 01/boostrap/css/style.css
+++ b/Quick AI 01/boostrap/css/style.css
@@ -2715,7 +2715,11 @@ span.status-not-available {background-color: #ffe6e6;color: #ea5252;}
 .template-categories ul li {padding: 10px 15px;line-height: 1.5;}
 .template-categories ul li a {color: #66676b}
 .template-categories ul li a:hover {color: var(--theme-color-1)}
-.template-categories ul li.active {color: #fff;background:var(--theme-color-1); border-radius: 50vh;}
+    .template-categories ul li.active {
+        color: #fff;
+        background: blue;
+        border-radius: 50vh;
+    }
 .template-categories ul li.active a {color: #fff;}
 .ai-templates-icon {width: 2.5rem;height: 2.5rem;display: flex;align-items: center;justify-content: center;overflow: hidden;border-radius: 9px;padding: 0.5rem;box-shadow: 0 0 #0000,0 0 #0000,0px 0px 0px 1px rgba(17,24,39,.05),0px 1px 4px rgba(17,24,39,.1),0px 8px 16px rgba(17,24,39,.1); margin-bottom: 10px}
 .ai-templates p {font-size: 14px;line-height: 1.5;color: #6b7280}
