--- a/Quick AI 01/AI.Master
+++ b/Quick AI 01/AI.Master
@@ -73,6 +73,7 @@ margin-top: 85px;"r-light">
                </div>
            </nav> 
        </div-->
+
         <nav style="  position: sticky;background: #fff;margin-top:33px;z-index: +1;">
     <nav class="navbar navbar-expand-lg navbar-light">
 <div class="header navbar-light bg-light" style=" position:fixed;width:100%;height:82px;margin-top: -35px;"> 
@@ -123,7 +124,7 @@ margin-top: 85px;"r-light">
             <div class="row">
                 <div class="col-xl-5 col-lg-5 col-md-12">
                     <div class="bg-image">
-                      <img src="img/hhh.png" / >
+                      <img src="img/hhh.png" style="    height: 61px;  width: 100px; "  >
                     </div>
                     <p>Aenean sodales mattis augue. Morbi euismod, felis at volutpat volutpat, quam lectus porttitor massa, tur ex a neque pulvinar pulvinar.</p>
                 </div>
@@ -163,18 +164,18 @@ margin-top: 85px;"r-light">
                 <div class="col-xl-12">
                     <div class="footer-rows-left">
                         <div class="footer-row">
-                            <span class="footer-copyright-text">2023 Socius IGB Pvt Ltd, All right reserved</span>
+                            <span class="footer22">2023 Socius IGB Pvt Ltd, All right reserved</span>
                         </div>
                     </div>
                     <div class="footer-rows-right">
                         <div class="footer-row">
                             <ul class="footer-social-links">
-                                <li><a href="https://www.facebook.com/" target="_blank" rel="nofollow"><i class="fa-brands fa-facebook-f"></i></a></li>
-                                <li><a href="https://www.twitter.com/" target="_blank" rel="nofollow"><i class="fa-brands fa-twitter" ></i></a></li>
-                                <li><a href="https://instagram.com" target="_blank" rel="nofollow"><i class="fa-brands fa-instagram" ></i></a></li>
-                                <li><a href="https://www.linkedin.com/" target="_blank" rel="nofollow"><i class="fa-brands fa-linkedin" ></i></a></li>
-                                <li><a href="https://pinterest.com/" target="_blank" rel="nofollow"><i class="fa-brands fa-pinterest"></i></a></li>
-                                <li><a href="https://www.youtube.com/" target="_blank" rel="nofollow"><i class="fa-brands fa-youtube"></i></a></li>
+                                <li><a href="https://www.facebook.com/"  ><i class="fa-brands fa-facebook-f"></i></a></li>
+                                <li><a href="https://www.twitter.com/"  ><i class="fa-brands fa-twitter" ></i></a></li>
+                                <li><a href="https://instagram.com"  ><i class="fa-brands fa-instagram" ></i></a></li>
+                                <li><a href="https://www.linkedin.com/"  ><i class="fa-brands fa-linkedin" ></i></a></li>
+                                <li><a href="https://pinterest.com/"  ><i class="fa-brands fa-pinterest"></i></a></li>
+                                <li><a href="https://www.youtube.com/"  ><i class="fa-brands fa-youtube"></i></a></li>
                         </ul>
                             <div class="clearfix"></div>
                         </div>
