--- a/Quick AI 01/AI.Master
+++ b/Quick AI 01/AI.Master
@@ -74,7 +74,7 @@ margin-top: 85px;"r-light">
            </nav> 
        </div-->
 
-        <nav style="  position: sticky;background: #fff;margin-top:33px;z-index: +1;">
+       <%-- <nav style="  position: sticky;background: #fff;margin-top:33px;z-index: +1;">
     <nav class="navbar navbar-expand-lg navbar-light">
 <div class="header navbar-light bg-light" style=" position:fixed;width:100%;height:82px;margin-top: -35px;"> 
     <div style="display:inline-block;border-right: 2px solid #e0e0e0;padding-right:10px;height:82px;padding-top:15px;padding-left:20px;padding-right:20px;" class="logo">
@@ -113,7 +113,70 @@ margin-top: 85px;"r-light">
     </div>
 </div>
         </nav><br /><br />
-</nav>
+</nav>--%>
+      <header id="header-container" class="fullwidth" style="position:fixed;">
+        
+                <!-- Header -->
+        <div id="header">
+            <div class="container" style="width:100%;">
+                <!-- Left Side Content -->
+                <div class="left-side" style=" margin-top: 4%;   ">
+                    <!-- Logo -->
+                    <div id="logo">
+                          <a   href="https://localhost:44308/Home.aspx">
+            <img src="img/hhh.png" style="    width: 65px;height: 42px;" /></a>
+                    </div>
+
+                  
+
+                </div>
+                <!-- Left Side Content / End -->
+
+
+                <!-- Right Side Content / End -->
+                <div class="right-side" style="    top: 30px;">
+                                            <div class="header-widget">
+                            <a href="https://localhost:44308/Login.aspx" class="popup-with-zoom-anim button ripple-effect">Join Now</a>
+                        </div>
+                    
+                                            <div class="header-widget">
+                            <div class="btn-group bootstrap-select language-switcher">
+                              
+                                <div class="dropdown"  >
+        <label for="Language"></label>
+                   <select name="Languge" id="Languge"  >
+                       <option value="en">english</option>
+                       <option value=" Arabic "> Arabic </option>
+                       <option value="Bangali">Bangali</option>
+                       <option value="Bulgarian">Bulgarian</option>
+                       <option value="Chinese">Chinese</option>
+                       <option value="English">English</option>
+                       <option value="French">French</option>
+                       <option value="German">German</option>
+                       <option value="Hebrew">Hebrew</option>
+                       <option value="Hindi">Hindi</option>
+                       <option value="Italian">Italian</option>
+                       <option value="Japanesh">Japanesh</option>
+                       <option value="Polish">Polish</option>
+                       <option value="Romanin">Romanian</option>
+                       <option value="Russian">Russian</option>
+                       <option value="Spanish">Spanish</option>
+                       <option value="Swedish">Swedish</option>
+                       <option value="Thai">Thai</option>
+                       <option value="Turkish">Turkish</option>
+                       <option value="Urdu">Urdu</option>
+                       <option value="vietnamese">vietnamese</option>
+                   </select>
+    </div>
+                            </div>
+                        </div>
+                                    </div>
+                <!-- Right Side Content / End -->
+
+            </div>
+        </div>
+        <!-- Header / End -->
+    </header>
         <div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
@@ -134,7 +197,8 @@ margin-top: 85px;"r-light">
                     <div class="footer-links">
                         <h3>My Account</h3>
                         <ul>
-                            <li><a href="https://localhost:44308/Login.aspx">Login</a></li><li><a href="https://localhost:44308/LoginPage4.aspx">Register</a></li>                        </ul>
+                            <li><a href="https://localhost:44308/Login.aspx">Login</a></li>
+                            <li><a href="https://localhost:44308/LoginPage4.aspx">Register</a></li>  </ul>
                     </div>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-4">
@@ -170,12 +234,12 @@ margin-top: 85px;"r-light">
                     <div class="footer-rows-right">
                         <div class="footer-row">
                             <ul class="footer-social-links">
-                                <li><a href="https://www.facebook.com/"  ><i class="fa-brands fa-facebook-f"></i></a></li>
-                                <li><a href="https://www.twitter.com/"  ><i class="fa-brands fa-twitter" ></i></a></li>
-                                <li><a href="https://instagram.com"  ><i class="fa-brands fa-instagram" ></i></a></li>
-                                <li><a href="https://www.linkedin.com/"  ><i class="fa-brands fa-linkedin" ></i></a></li>
-                                <li><a href="https://pinterest.com/"  ><i class="fa-brands fa-pinterest"></i></a></li>
-                                <li><a href="https://www.youtube.com/"  ><i class="fa-brands fa-youtube"></i></a></li>
+                                <li><a href="https://www.facebook.com/" target="_blank" rel="nofollow"  ><i class="fa-brands fa-facebook-f"></i></a></li>
+                                <li><a href="https://www.twitter.com/"  target="_blank" rel="nofollow"   ><i class="fa-brands fa-twitter" ></i></a></li>
+                                <li><a href="https://instagram.com"  target="_blank" rel="nofollow"   ><i class="fa-brands fa-instagram" ></i></a></li>
+                                <li><a href="https://www.linkedin.com/" target="_blank" rel="nofollow"    ><i class="fa-brands fa-linkedin" ></i></a></li>
+                                <li><a href="https://pinterest.com/"  target="_blank" rel="nofollow"   ><i class="fa-brands fa-pinterest"></i></a></li>
+                                <li><a href="https://www.youtube.com/"  target="_blank" rel="nofollow"  ><i class="fa-brands fa-youtube"></i></a></li>
                         </ul>
                             <div class="clearfix"></div>
                         </div>
@@ -186,9 +250,8 @@ margin-top: 85px;"r-light">
     </div>
 
 </div>
-        <div id="backtoto" class="visible"><a href="#"><i class="fa-solid fa-chevron-up"></i></a></div>
+        <div id="back" class="visible" style="  position: fixed;  right: 0; opacity: 0;  visibility: hidden; bottom: 25px;  margin: 0 25px 0 0; z-index: 999;  transition: .35s; transform: translateY(10px);   opacity: 1; visibility: visible;  transform: translateY(0);"><a href="#"><i class="fa-solid fa-chevron-up"></i></a></div>
         </form>
     
 </body>
 </html>
- 
