--- a/Quick AI 01/AI.Master
+++ b/Quick AI 01/AI.Master
@@ -124,7 +124,7 @@ margin-top: 85px;"r-light">
                     <!-- Logo -->
                     <div id="logo">
                           <a   href="https://localhost:44308/Home.aspx">
-            <img src="img/hhh.png" style="    width: 65px;height: 42px;" /></a>
+            <img src="img/hhh.png" style="width: 65px;height: 42px;" /></a>
                     </div>
 
                   
@@ -136,7 +136,7 @@ margin-top: 85px;"r-light">
                 <!-- Right Side Content / End -->
                 <div class="right-side" style="    top: 30px;">
                                             <div class="header-widget">
-                            <a href="https://localhost:44308/Login.aspx" class="popup-with-zoom-anim button ripple-effect">Join Now</a>
+                            <a href="https://localhost:44308/Login.aspx" class="popup-with-zoom-anim button ripple-effect" style="background-color: #0d6efd;" >Join Now</a>
                         </div>
                     
                                             <div class="header-widget">
@@ -187,7 +187,7 @@ margin-top: 85px;"r-light">
             <div class="row">
                 <div class="col-xl-5 col-lg-5 col-md-12">
                     <div class="bg-image">
-                      <img src="img/hhh.png" style="    height: 61px;  width: 100px; "  >
+                      <img src="img/hhh.png" style=" height: 61px;  width: 100px; "  >
                     </div>
                     <p>Aenean sodales mattis augue. Morbi euismod, felis at volutpat volutpat, quam lectus porttitor massa, tur ex a neque pulvinar pulvinar.</p>
                 </div>
