--- a/Quick AI 01/AI.Master
+++ b/Quick AI 01/AI.Master
@@ -179,6 +179,7 @@ margin-top: 85px;"r-light">
     </header>
         <div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                fdfsdds
             </asp:ContentPlaceHolder>
         </div>
         <div id="footer">
