--- a/Quick AI 01/boostrap/css/style.css
+++ b/Quick AI 01/boostrap/css/style.css
@@ -2442,7 +2442,9 @@ a.dashboard-responsive-nav-trigger.active {border-radius: 4px 4px 0 0 }
 body {color: #666;font-size: 16px;line-height: 27px;background-color: #fff }
 body.gray {background-color: #fbfbfb }
 body p {font-size: 16px;line-height: 27px }
-body, h1, h2, h3, h4, h5, h6, input[type=text], input[type=password], input[type=email], textarea, select, input[type=button], input[type=submit], button, body .pac-container {font-family: nunito, helveticaneue, helvetica neue, Helvetica, Arial, sans-serif;text-transform: none }
+body, h1, h2, h3, h4, h5, h6, input[type=text], input[type=password], input[type=email], textarea, select, input[type=button], input[type=submit], button, body .pac-container {font-family: nunito, helveticaneue, helvetica neue, Helvetica, Arial, sans-serif;text-transform: none;
+    height: 194px;
+}
 h1, h2, h3, h4, h5, h6 {color: #333;font-weight: 500;margin: 0;padding: 0 }
 h1 {font-size: 32px }
 h2 {font-size: 26px }
